src/test/compile-fail/unnecessary-unsafe.rs
// error-pattern: calculated effect is ''
unsafe fn main() {
  log "hi";
}